# fmri-to-frame

./: README.md  pyproject.toml
src/fmri2frame/conf/: default.yaml
src/fmri2frame/launchers/: compute_all_latents.py  compute_brain_alignments.py  compute_captions.py  compute_stimuli_latents.py  eval_decoders.py  evaluate_alignments.py  evaluate_brain_decoders.py  generate_alignments_figures.py  requirements.txt  sweep_contrastive_brain_decoder.py  sweep_contrastive_multi_subject_decoder.py  sweep_contrastive_single_subject_decoder.py  train_and_eval_all.py  train_brain_decoders.py  train_brain_decoders.py.save  train_multi_subject_contrative_decoders.py  train_multi_subject_decoders.py  train_multi_subject_linear_decoders.py  train_single_subject_contrastive_decoders.py  train_single_subject_decoders.py  train_single_subject_linear_decoders.py
src/fmri2frame/scripts/: brain_decoder_contrastive.py  brain_decoder_linear.py  compute_alignment.py  compute_latents.py  data.py  eval.py  evaluate_brain_decoder.py  figures_alignments.py  generate_captions.py  model_diffusion.py  model_vdvae.py  setup_xp.py  train.py  train_brain_decoder.py  train_brain_decoder_contrastive.py  utils.py
src/fmri2frame/scripts/wen2017/: _01_download_wen_2017.py  _02_project_brain_volumes.py  _03_preprocess_data.py
